# spank_report

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.deb  Dockerfile.rpm  README.md  package.cmake
.github/workflows/: check-versions.yml  main.yml
ci/: versions_checker.sh
src/: api.c  api.h  cJSON.c  cJSON.h  config.c  config.h  job_submit_report.c  slurm_utils.c  slurm_utils.h  spank_report.c  spank_report.h  string_utils.c  string_utils.h
